--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,27 +6,33 @@
     android:layout_height="wrap_content"
     android:background="@color/gray_1"
     tools:context=".ExploreFragment">
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/searchUsers_eTL"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/searchUser_cardView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:padding="16dp"
-        app:hintEnabled="true"
-        app:hintTextColor="@color/gray_2"
-        app:boxStrokeColor="@color/white"
-        app:expandedHintEnabled="true"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="18dp"
+        android:layout_margin="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-        <com.google.android.material.textfield.TextInputEditText
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search Users"
-            android:textColorHint="@color/gray_2"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/white"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/searchUsers_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search Users"
+                android:padding="16dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:inputType="text"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/posts_recycler_view"
@@ -37,7 +43,7 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/searchUsers_eTL"
+        app:layout_constraintTop_toBottomOf="@id/searchUser_cardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
