--- a/app/src/main/res/layout/posts_user_profile_layout.xml
+++ b/app/src/main/res/layout/posts_user_profile_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:padding="4dp"
+    android:background="@color/gray_1">
 
     <ImageView
         android:id="@+id/postImage"
