Made HomeFeed working with post details

--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -82,11 +82,11 @@
                     android:layout_toRightOf="@id/dot_tV"
                     android:layout_below="@id/postUsername_textView"/>
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_bookmark_normal"
-                    android:layout_alignParentRight="true"/>
+<!--                <ImageView-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_bookmark_normal"-->
+<!--                    android:layout_alignParentRight="true"/>-->
 
 
             </RelativeLayout>
