--- a/app/src/main/res/menu/user_profile_dropdown_items.xml
+++ b/app/src/main/res/menu/user_profile_dropdown_items.xml
@@ -7,7 +7,7 @@
         android:title="Your Account"/>
     <item
         android:id="@+id/item2"
-        android:title="App Settings"/>
+        android:title="Edit Profile"/>
     <item
         android:id="@+id/item3"
         android:title="Contact Us"/>
